; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_module.c_add_taint_module.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_module.c_add_taint_module.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.module = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.module*, i32)* @add_taint_module to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_taint_module(%struct.module* %0, i32 %1) #0 {
  %3 = alloca %struct.module*, align 8
  %4 = alloca i32, align 4
  store %struct.module* %0, %struct.module** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @add_taint(i32 %5)
  %7 = load i32, i32* %4, align 4
  %8 = shl i32 1, %7
  %9 = load %struct.module*, %struct.module** %3, align 8
  %10 = getelementptr inbounds %struct.module, %struct.module* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = or i32 %11, %8
  store i32 %12, i32* %10, align 4
  ret void
}

declare dso_local i32 @add_taint(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
